[gd_scene load_steps=15 format=3 uid="uid://b826re2khwj2c"]

[ext_resource type="Texture2D" uid="uid://dtrufa6ks3lpr" path="res://Entitys/Sprites/Chicken/chicken red.png" id="1_apuqd"]
[ext_resource type="Script" path="res://Entitys/Ghosts/ghost.gd" id="1_ati7u"]
[ext_resource type="Script" path="res://Entitys/Ghosts/ghost_body_color.gd" id="3_mm45m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_00du3"]
radius = 7.5

[sub_resource type="Animation" id="Animation_acln7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_18phb"]
resource_name = "moving_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_j2654"]
resource_name = "moving_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gkd0g"]
resource_name = "runaway"
length = 0.6
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"blink_1"
}, {
"args": [],
"method": &"blink_2"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mdaw1"]
_data = {
"RESET": SubResource("Animation_acln7"),
"moving_left": SubResource("Animation_18phb"),
"moving_right": SubResource("Animation_j2654"),
"runaway": SubResource("Animation_gkd0g")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d7ys8"]
animation = &"moving_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1dl3l"]
animation = &"moving_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hmg7f"]
animation = &"moving_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ed6p1"]
animation = &"moving_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7adx8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_d7ys8")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1dl3l")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_hmg7f")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ed6p1")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[node name="Ghost" type="Area2D"]
collision_layer = 16
script = ExtResource("1_ati7u")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_apuqd")
flip_h = true
hframes = 8
vframes = 27
frame = 17
script = ExtResource("3_mm45m")
run1 = Color(0.929412, 0, 0.705882, 1)
run2 = Color(0.278431, 0.0745098, 0, 1)
normal = Color(1, 1, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_00du3")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mdaw1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendSpace2D_7adx8")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/blend_position = Vector2(0, 0)

[node name="ScatterTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="UpdateChasingTargetPositionTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="RunAwayTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="PointLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -19.0
offset_top = -28.0
offset_right = 21.0
offset_bottom = 3.0
theme_override_font_sizes/font_size = 12
text = "200"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AtHomeTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ScatterTimer" to="." method="_on_scatter_timer_timeout"]
[connection signal="timeout" from="UpdateChasingTargetPositionTimer" to="." method="_on_update_chasing_target_position_timer_timeout"]
[connection signal="timeout" from="RunAwayTimer" to="." method="_on_run_away_timer_timeout"]
